--- a/about.html
+++ b/about.html
@@ -94,14 +94,11 @@
         <div class="col-lg-5 col-md-6">
           <div class="detail-box">
             <h2>
-              About us
+              Acerca de nosotros
             </h2>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomisedThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised
+              Empezamos en 2004 fundado por Iván Hernandez. Operando desde nuestra casa, nuestro negocio crecio debido a la larga vida de nuestras reparaciones, además de contar con los recursos para reparar de forma efectiva una amplia gama de equipos. Hoy somos una de las empresas mas reconocidas en el área.
             </p>
-            <a href="">
-              Read More
-            </a>
           </div>
         </div>
         <div class="col-lg-7 col-md-6">
