--- a/service.html
+++ b/service.html
@@ -91,7 +91,7 @@
   <section class="service_section layout_padding">
     <div class="container ">
       <div class="heading_container heading_center">
-        <h2> Our Services </h2>
+        <h2> Nuestros Servicios </h2>
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-4 mx-auto">
@@ -101,11 +101,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Maintenance
+                Mantenimiento
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Al observar su diseño, el objetivo de usar Lorem 
+                Ipsum es que tenga un diseño más o menos normal.
               </p>
             </div>
           </div>
@@ -117,11 +117,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Electrical
+                Eléctrica
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Al observar su diseño, el objetivo de usar Lorem Ipsum
+                 es que tenga un diseño más o menos normal.
               </p>
             </div>
           </div>
@@ -133,11 +133,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Plumbing
+                Plomería
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Al observar su diseño, el objetivo de usar Lorem Ipsum
+                 es que tenga un diseño más o menos normal.
               </p>
             </div>
           </div>
@@ -145,7 +145,7 @@
       </div>
       <div class="btn-box">
         <a href="">
-          View More
+          Ver más
         </a>
       </div>
     </div>
@@ -157,7 +157,7 @@
   <section class="info_section ">
     <div class="container">
       <h4>
-        Get In Touch
+        Contacta con nosotros
       </h4>
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -170,7 +170,7 @@
                       <i class="fa fa-map-marker" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Lorem Ipsum is simply dummy text
+                      Lorem Ipsum es simplemente texto ficticio
                     </p>
                   </div>
                 </a>
@@ -182,7 +182,7 @@
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
                     <p>
-                      +02 1234567890
+                      +507 634567890
                     </p>
                   </div>
                 </a>
@@ -194,7 +194,7 @@
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <p>
-                      demo@gmail.com
+                      ejemoplo@utp.ac.pa
                     </p>
                   </div>
                 </a>
@@ -206,7 +206,7 @@
     </div>
     <div class="social-box">
       <h4>
-        Follow Us
+        Síganos
       </h4>
       <div class="box">
         <a href="">
