--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
           <div class="col-md-6 ">
             <div class="detail-box">
               <h1>
-                Repair and <br>
-                Maintenance <br>
-                Services
+                Servicios de <br>
+                Reparación y <br>
+                Mantenimiento
               </h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum voluptatem adipisci. Quos molestiae saepe dicta nobis pariatur, tempora iusto, ad possimus soluta hic praesentium mollitia consequatur beatae, aspernatur culpa.
+                Tenemos mas de 20 años en el negocio. Contamos con una amplia variedad de piezas para marcas como LG, Samsung, York, Carrier, entre otras. Nuestro personal esta en constante capacitación para usar lo ultimo en tecnología.<br>
               </p>
               <a href="">
-                Contact Us
+                Contactenos
               </a>
             </div>
           </div>
@@ -132,7 +132,7 @@
             </svg>
           </div>
           <h5 class="name">
-            Repair
+            Reparar
           </h5>
         </div>
         <div class="box active">
@@ -144,7 +144,7 @@
             </svg>
           </div>
           <h5 class="name">
-            Improve
+            Mejorar
           </h5>
         </div>
         <div class="box">
@@ -155,7 +155,7 @@
               <path d="M46,31H42.422a1,1,0,0,1,0-2H46a1,1,0,0,0,.916-1.4A5.992,5.992,0,0,0,36.231,27h-8.04a5.992,5.992,0,0,0-10.685.6,1,1,0,0,0,.916,1.4H22a1,1,0,0,1,0,2H18.422a1,1,0,0,0-.916,1.4,5.992,5.992,0,0,0,10.685.6h8.04a5.992,5.992,0,0,0,10.685-.6A1,1,0,0,0,46,31Zm-4.578,3a4,4,0,0,1-3.662-2.4,1,1,0,0,0-.916-.6H27.578a1,1,0,0,0-.916.6,3.991,3.991,0,0,1-6.3,1.4H22a3,3,0,0,0,0-6H20.359a3.991,3.991,0,0,1,6.3,1.4,1,1,0,0,0,.916.6h9.266a1,1,0,0,0,.916-.6,3.991,3.991,0,0,1,6.3-1.4h-1.64a3,3,0,0,0,0,6h1.64A3.988,3.988,0,0,1,41.422,34Z" /></svg>
           </div>
           <h5 class="name">
-            Maintain
+            Mantener
           </h5>
         </div>
       </div>
@@ -172,13 +172,13 @@
         <div class="col-lg-5 col-md-6">
           <div class="detail-box">
             <h2>
-              About us
+              Acerca de nosotros
             </h2>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomisedThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised
+              Empezamos en 2004 fundado por Iván Hernandez. Operando desde nuestra casa, nuestro negocio crecio debido a la larga vida de nuestras reparaciones, además de contar con los recursos para reparar de forma efectiva una amplia gama de equipos. Hoy somos una de las empresas mas reconocidas en el área.
             </p>
             <a href="">
-              Read More
+              Leer más
             </a>
           </div>
         </div>
@@ -207,14 +207,13 @@
         <div class="col-md-6 ">
           <div class="detail-box">
             <h2>
-              We Provide Professional <br>
-              Home Services.
+              Proveemos servicios profesionales <br>
+              para casas.
             </h2>
             <p>
-              randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All randomised words which don't look even slightly
-            </p>
+              Simplifica la gestión de tus propiedades de alquiler con nuestros servicios profesionales especializados. Desde reparaciones hasta proyectos de mejora, estamos aquí para brindarte soluciones confiables y de alta calidad para tus casas.</p>
             <a href="">
-              Read More
+              Leer mas
             </a>
           </div>
         </div>
@@ -229,7 +228,7 @@
   <section class="service_section layout_padding">
     <div class="container ">
       <div class="heading_container heading_center">
-        <h2> Our Services </h2>
+        <h2> Nuestros Servicios </h2>
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-4 mx-auto">
@@ -239,11 +238,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Maintenance
+                Mantenimiento
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Al observar su diseño, el objetivo de usar Lorem 
+                Ipsum es que tenga un diseño más o menos normal.
               </p>
             </div>
           </div>
@@ -255,11 +254,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Electrical
+                Eléctrica
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Al observar su diseño, el objetivo de usar Lorem Ipsum
+                 es que tenga un diseño más o menos normal.
               </p>
             </div>
           </div>
@@ -271,11 +270,11 @@
             </div>
             <div class="detail-box">
               <h5>
-                Plumbing
+                Plomería
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Al observar su diseño, el objetivo de usar Lorem Ipsum
+                 es que tenga un diseño más o menos normal.
               </p>
             </div>
           </div>
@@ -283,7 +282,7 @@
       </div>
       <div class="btn-box">
         <a href="">
-          View More
+          Ver más
         </a>
       </div>
     </div>
@@ -297,7 +296,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          What Our Clients Say
+          Lo que dicen nuestros clientes
         </h2>
       </div>
       <div class="carousel-wrap layout_padding2-top ">
@@ -324,7 +323,7 @@
               </div>
               <div class="client_text">
                 <p>
-                  chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum
+                  Fragmentos según sea necesario, lo que lo convierte en el primer generador real de Internet. Utiliza un diccionario de más de 200 palabras latinas, combinado con un puñado de estructuras de oraciones modelo, para generar Lorem Ipsum.
                 </p>
               </div>
             </div>
@@ -351,8 +350,7 @@
               </div>
               <div class="client_text">
                 <p>
-                  chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum
-                </p>
+                  Fragmentos según sea necesario, lo que lo convierte en el primer generador real de Internet. Utiliza un diccionario de más de 200 palabras latinas, combinado con un puñado de estructuras de oraciones modelo, para generar Lorem Ipsum.                </p>
               </div>
             </div>
           </div>
@@ -378,8 +376,7 @@
               </div>
               <div class="client_text">
                 <p>
-                  chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum
-                </p>
+                  Fragmentos según sea necesario, lo que lo convierte en el primer generador real de Internet. Utiliza un diccionario de más de 200 palabras latinas, combinado con un puñado de estructuras de oraciones modelo, para generar Lorem Ipsum.                </p>
               </div>
             </div>
           </div>
@@ -405,8 +402,7 @@
               </div>
               <div class="client_text">
                 <p>
-                  chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum
-                </p>
+                  Fragmentos según sea necesario, lo que lo convierte en el primer generador real de Internet. Utiliza un diccionario de más de 200 palabras latinas, combinado con un puñado de estructuras de oraciones modelo, para generar Lorem Ipsum.                </p>
               </div>
             </div>
           </div>
@@ -423,27 +419,27 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Contact Us
+          Contacta con nosotros
         </h2>
       </div>
       <div class="row">
         <div class="col-md-6">
           <form action="">
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Nombre" />
             </div>
             <div>
-              <input type="text" placeholder="Phone Number" />
+              <input type="text" placeholder="Numero de Telefono" />
             </div>
             <div>
               <input type="email" placeholder="Email" />
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Mensaje" />
             </div>
             <div class="d-flex ">
               <button>
-                SEND
+                ENVIAR
               </button>
             </div>
           </form>
@@ -466,7 +462,7 @@
   <section class="info_section ">
     <div class="container">
       <h4>
-        Get In Touch
+        Ponte en contacto
       </h4>
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -479,7 +475,7 @@
                       <i class="fa fa-map-marker" aria-hidden="true"></i>
                     </div>
                     <p>
-                      Lorem Ipsum is simply dummy text
+                      Lorem Ipsum es simplemente texto ficticio
                     </p>
                   </div>
                 </a>
@@ -491,7 +487,7 @@
                       <i class="fa fa-phone" aria-hidden="true"></i>
                     </div>
                     <p>
-                      +02 1234567890
+                      +507 634567890
                     </p>
                   </div>
                 </a>
@@ -503,7 +499,7 @@
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <p>
-                      demo@gmail.com
+                    ejemoplo@utp.ac.pa
                     </p>
                   </div>
                 </a>
@@ -515,7 +511,7 @@
     </div>
     <div class="social-box">
       <h4>
-        Follow Us
+        Síganos
       </h4>
       <div class="box">
         <a href="">
@@ -542,8 +538,8 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayDateYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayDateYear"></span> Todos los derechos reservados por
+        <a href="https://html.design/">Nosotros que pasa</a>
       </p>
     </div>
   </footer>
